<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>co.dlg.test</groupId>
    <artifactId>testProject</artifactId>
    <version>1.0</version>

    <properties>
        <sonar.language>java</sonar.language>
        <custom.folder>config</custom.folder>
        <surefire.fork.count>2</surefire.fork.count>
        <features>src/test/resources/features</features>
        <testFailureIgnore>false</testFailureIgnore>
        <driverType>$driver</driverType>
        <jenkinsStyleReports>true</jenkinsStyleReports>
        <chromeDriverPath>${basedir}\src\main\resources\drivers\chromedriver.exe</chromeDriverPath>
        <ieDriverPath>${basedir}\src\main\resources\drivers\IEDriverServer.exe</ieDriverPath>
        <geckoDriverPath>${basedir}\src\main\resources\drivers\geckodriver.exe</geckoDriverPath>
        <phantomjsDriverPath>${basedir}\src\main\resources\drivers\phantomjs.exe</phantomjsDriverPath>
        <java.version>1.8</java.version>
        <junit.version>4.12</junit.version>
        <hamcrest.version>1.3</hamcrest.version>
        <cucumber.version>1.2.5</cucumber.version>
        <selenium.webdriver.version>3.0.1</selenium.webdriver.version>
        <maven.compiler.version>3.3</maven.compiler.version>
        <maven.surefire.plugin.version>2.19.1</maven.surefire.plugin.version>
        <slf4j.version>1.7.21</slf4j.version>
        <applitools.version>2.56</applitools.version>
        <logback.version>1.1.7</logback.version>
        <wiremock.version>1.58</wiremock.version>
        <cucumber.jvm.parallel.version>1.2.1</cucumber.jvm.parallel.version>
        <wiremock.version>1.58</wiremock.version>
        <maven.checkstyle.plugin.version>2.17</maven.checkstyle.plugin.version>
        <checkstyle.version>6.19</checkstyle.version>
        <acceptance.tests.in.parallel>2</acceptance.tests.in.parallel>
    </properties>

    <profiles>
        <profile>
            <id>jenkins</id>
        </profile>

        <profile>
            <id>ENVIRONMENT ID GOES HERE!!!</id>
            <!-- Use these profiles to run tests against different environments -->
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
        </profile>

        <profile>
            <id>reporting</id>
            <properties>
                <jenkinsStyleReports>true</jenkinsStyleReports>
            </properties>
        </profile>
    </profiles>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven.compiler.version}</version>
                <configuration>
                    <encoding>UTF-8</encoding>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>

            <plugin>
                <artifactId>maven-resources-plugin</artifactId>
                <version>3.0.2</version>
                <executions>
                    <execution>
                        <id>copy-resources</id>
                        <phase>validate</phase>
                        <goals>
                            <goal>copy-resources</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>target/test-classes/com/dlg/saucecucumberjvm</outputDirectory>
                            <resources>
                                <resource>
                                    <directory>src/test/resources</directory>
                                    <filtering>true</filtering>
                                </resource>
                            </resources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>com.github.temyers</groupId>
                <artifactId>cucumber-jvm-parallel-plugin</artifactId>
                <version>4.0.0</version>
                <executions>
                    <execution>
                        <id>generateRunners</id>
                        <phase>validate</phase>
                        <goals>
                            <goal>generateRunners</goal>
                        </goals>
                        <configuration>
                            <glue>${project.groupId}.step_definitions, ${project.groupId}.hooks</glue>
                            <outputDirectory>${project.build.directory}/generated-test-sources/features</outputDirectory>
                            <featuresDirectory>${features}</featuresDirectory>
                            <cucumberOutputDir>${project.build.directory}/cucumber_reports/regression_results</cucumberOutputDir>
                            <strict>true</strict>
                            <plugins>
                                <plugin>
                                    <name>json</name>
                                </plugin>
                                <plugin>
                                    <name>html</name>
                                </plugin>
                                <plugin>
                                    <name>junit</name>
                                </plugin>
                            </plugins>
                            <monochrome>true</monochrome>
                            <namingScheme>pattern</namingScheme>
                            <!--<namingPattern>{f}_Parallel{c}IT</namingPattern>-->
                            <namingPattern>{f}_Parallel{c}Test</namingPattern>
                            <tags></tags>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>1.6.0</version>
                <executions>
                    <execution>
                        <id>merge-cucumber-js-reports</id>
                        <phase>test</phase>
                        <goals>
                            <goal>java</goal>
                        </goals>
                        <configuration>
                            <classpathScope>test</classpathScope>
                            <mainClass>${project.groupId}.JSONReportMerger</mainClass>
                            <arguments>
                                <argument>target/cucumber_reports/regression_results</argument>
                            </arguments>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>net.masterthought</groupId>
                <artifactId>maven-cucumber-reporting</artifactId>
                <version>3.0.0</version>
                <executions>
                    <execution>
                        <phase>test</phase>
                        <goals>
                            <goal>generate</goal>
                        </goals>
                        <configuration>
                            <projectName>cucumber-jvm</projectName>
                            <outputDirectory>${project.build.directory}</outputDirectory>
                            <cucumberOutput>${project.build.directory}/cucumber_reports/regression_results/cucumber.json</cucumberOutput>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven.surefire.plugin.version}</version>
                <configuration>
                    <forkCount>${surefire.fork.count}</forkCount>
                    <reuseForks>false</reuseForks>
                    <argLine>-Duser.language=en</argLine>
                    <argLine>-Xmx1024m</argLine>
                    <argLine>-XX:MaxPermSize=256m</argLine>
                    <argLine>-Dfile.encoding=UTF-8</argLine>
                    <useFile>false</useFile>
                    <testFailureIgnore>${testFailureIgnore}</testFailureIgnore>
                    <!--<printSummary>true</printSummary>-->
                    <includes>
                        <!--<include>**/*IT.class</include>-->
                        <include>**/*Test.class</include>
                    </includes>
                    <systemPropertyVariables>
                        <driverType>${driverType}</driverType>
                        <!--<webdriver.chrome.driver>${chromeDriverPath}</webdriver.chrome.driver>
                        <webdriver.ie.driver>${ieDriverPath}</webdriver.ie.driver>
                        <webdriver.gecko.driver>${geckoDriverPath}</webdriver.gecko.driver>-->
                        <webdriver.phantomjs.driver>${phantomjsDriverPath}</webdriver.phantomjs.driver>
                        <phantomjs.binary.path>${phantomjsDriverPath}</phantomjs.binary.path>
                        <jenkinsStyleReports>${jenkinsStyleReports}</jenkinsStyleReports>
                    </systemPropertyVariables>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <dependencies>
        <dependency>
            <groupId>com.usmanhussain</groupId>
            <artifactId>UsmanHussainFramework</artifactId>
            <version>1.2.0</version>
        </dependency>
    </dependencies>
</project>
